<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/size_5dp"
    android:layout_marginTop="@dimen/size_7dp"
    android:layout_marginEnd="@dimen/size_5dp"
    android:background="@color/sister_color_white"
    android:paddingBottom="@dimen/size_10dp"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_alipay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sister_payment_alipay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/union_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/union_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_5dp"
            android:text="@string/sister_payment_alipay_title"
            android:textColor="@color/sister_color_black"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintBottom_toBottomOf="@id/icon_alipay"
            app:layout_constraintLeft_toRightOf="@id/icon_alipay"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/icon_alipay" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_05dp"
        android:layout_marginTop="@dimen/size_7dp"
        android:background="@color/sister_color_gray_transparent"
        app:layout_constraintTop_toBottomOf="@id/layout_top" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/size_7dp"
        android:text="@string/sister_payment_alipay_desc"
        android:textColor="@color/sister_color_black"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <!--    支付宝账号-->
    <TextView
        android:id="@+id/account_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_7dp"
        android:text="@string/sister_payment_alipay_account"
        android:textColor="@color/sister_color_gray"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/sister_color_gray"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintBottom_toBottomOf="@id/account_label"
        app:layout_constraintLeft_toRightOf="@id/account_label"
        app:layout_constraintTop_toTopOf="@id/account_label"
        tools:text="1234567@gmail.com" />

    <ImageView
        android:id="@+id/copy_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_10dp"
        android:src="@drawable/sister_copy"
        app:layout_constraintBottom_toBottomOf="@id/account_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/account_label" />


    <!--    支付宝姓-->
    <TextView
        android:id="@+id/first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_7dp"
        android:text="@string/sister_payment_alipay_first_name"
        android:textColor="@color/sister_color_gray"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_label" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/sister_color_gray"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintBottom_toBottomOf="@id/first_name_label"
        app:layout_constraintLeft_toRightOf="@id/first_name_label"
        app:layout_constraintTop_toTopOf="@id/first_name_label"
        tools:text="王" />

    <ImageView
        android:id="@+id/copy_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_10dp"
        android:src="@drawable/sister_copy"
        app:layout_constraintBottom_toBottomOf="@id/first_name_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/first_name_label" />

    <!--    支付宝名-->
    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_7dp"
        android:text="@string/sister_payment_alipay_last_name"
        android:textColor="@color/sister_color_gray"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_label" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/sister_color_gray"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintBottom_toBottomOf="@id/last_name_label"
        app:layout_constraintLeft_toRightOf="@id/last_name_label"
        app:layout_constraintTop_toTopOf="@id/last_name_label"
        tools:text="尼玛" />

    <ImageView
        android:id="@+id/copy_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_10dp"
        android:src="@drawable/sister_copy"
        app:layout_constraintBottom_toBottomOf="@id/last_name_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/last_name_label" />

    <!--    支付宝姓名-->
    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_10dp"
        android:layout_marginTop="@dimen/size_7dp"
        android:text="@string/sister_payment_alipay_name"
        android:textColor="@color/sister_color_gray"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name_label" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/sister_color_gray"
        android:textSize="@dimen/font_10sp"
        app:layout_constraintBottom_toBottomOf="@id/name_label"
        app:layout_constraintLeft_toRightOf="@id/name_label"
        app:layout_constraintTop_toTopOf="@id/name_label"
        tools:text="王尼玛" />

    <ImageView
        android:id="@+id/copy_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_10dp"
        android:src="@drawable/sister_copy"
        app:layout_constraintBottom_toBottomOf="@id/name_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/name_label" />

</androidx.constraintlayout.widget.ConstraintLayout>