<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_5dp"
        android:layout_marginTop="@dimen/size_7dp"
        android:layout_marginEnd="@dimen/size_5dp"
        android:background="@color/sister_color_white"
        android:paddingBottom="@dimen/size_10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bank_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_7dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icon_union"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sister_payment_union"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/union_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/union_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_5dp"
                android:text="@string/sister_payment_union_title"
                android:textColor="@color/sister_color_black"
                android:textSize="@dimen/font_12sp"
                app:layout_constraintBottom_toBottomOf="@id/icon_union"
                app:layout_constraintLeft_toRightOf="@id/icon_union"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/icon_union" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_05dp"
            android:layout_marginTop="@dimen/size_7dp"
            android:background="@color/sister_color_gray_transparent"
            app:layout_constraintTop_toBottomOf="@id/bank_top" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/size_7dp"
            android:text="@string/sister_payment_union_desc"
            android:textColor="@color/sister_color_black"
            android:textSize="@dimen/font_10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <!--    银行卡姓名-->
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_7dp"
            android:text="@string/sister_payment_union_name"
            android:textColor="@color/sister_color_gray"
            android:textSize="@dimen/font_10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sister_color_gray"
            android:textSize="@dimen/font_10sp"
            app:layout_constraintBottom_toBottomOf="@id/name_label"
            app:layout_constraintLeft_toRightOf="@id/name_label"
            app:layout_constraintTop_toTopOf="@id/name_label"
            tools:text="姓名" />

        <ImageView
            android:id="@+id/copy_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_10dp"
            android:src="@drawable/sister_copy"
            app:layout_constraintBottom_toBottomOf="@id/name_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/name_label" />


        <!--    银行卡号-->
        <TextView
            android:id="@+id/num_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_7dp"
            android:text="@string/sister_payment_union_num"
            android:textColor="@color/sister_color_gray"
            android:textSize="@dimen/font_10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label" />

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sister_color_gray"
            android:textSize="@dimen/font_10sp"
            app:layout_constraintBottom_toBottomOf="@id/num_label"
            app:layout_constraintLeft_toRightOf="@id/num_label"
            app:layout_constraintTop_toTopOf="@id/num_label"
            tools:text="12345678" />

        <ImageView
            android:id="@+id/copy_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_10dp"
            android:src="@drawable/sister_copy"
            app:layout_constraintBottom_toBottomOf="@id/num_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/num_label" />

        <!--    开户银行-->
        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_7dp"
            android:text="@string/sister_payment_union_address"
            android:textColor="@color/sister_color_gray"
            android:textSize="@dimen/font_10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/num_label" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sister_color_gray"
            android:textSize="@dimen/font_10sp"
            app:layout_constraintBottom_toBottomOf="@id/address_label"
            app:layout_constraintLeft_toRightOf="@id/address_label"
            app:layout_constraintTop_toTopOf="@id/address_label"
            tools:text="开户银行" />

        <ImageView
            android:id="@+id/copy_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_10dp"
            android:src="@drawable/sister_copy"
            app:layout_constraintBottom_toBottomOf="@id/address_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/address_label" />

        <!--    开户银行-->
        <TextView
            android:id="@+id/branch_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_7dp"
            android:text="@string/sister_payment_union_branch"
            android:textColor="@color/sister_color_gray"
            android:textSize="@dimen/font_10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_label" />

        <TextView
            android:id="@+id/branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/sister_color_gray"
            android:textSize="@dimen/font_10sp"
            app:layout_constraintBottom_toBottomOf="@id/branch_label"
            app:layout_constraintLeft_toRightOf="@id/branch_label"
            app:layout_constraintTop_toTopOf="@id/branch_label"
            tools:text="开户支行" />

        <ImageView
            android:id="@+id/copy_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_10dp"
            android:src="@drawable/sister_copy"
            app:layout_constraintBottom_toBottomOf="@id/branch_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/branch_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_tip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/size_5dp"
        android:layout_marginTop="@dimen/size_7dp"
        android:layout_marginEnd="@dimen/size_5dp"
        android:layout_marginBottom="@dimen/size_7dp"
        android:background="@color/sister_color_white"
        android:paddingBottom="@dimen/size_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_bank">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tip_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_7dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icon_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sister_check_error"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tip"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_5dp"
                android:text="@string/sister_payment_tip"
                android:textColor="@color/sister_color_black"
                android:textSize="@dimen/font_12sp"
                app:layout_constraintLeft_toRightOf="@id/icon_error"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/tip_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_05dp"
            android:layout_marginTop="@dimen/size_7dp"
            android:background="@color/sister_color_gray_transparent"
            app:layout_constraintTop_toBottomOf="@id/tip_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_7dp"
            android:lineSpacingExtra="@dimen/size_3dp"
            android:paddingStart="@dimen/size_10dp"
            android:paddingEnd="@dimen/size_10dp"
            android:text="@string/sister_payment_tip_union"
            android:textColor="@color/sister_color_gray"
            android:textSize="@dimen/font_10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>