<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@drawable/sister_main_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/close">

        <RadioGroup
            android:id="@+id/main_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/size_6dp"
            android:paddingRight="@dimen/size_6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rb_chat"
                style="@style/WrapWrap"
                android:background="@drawable/sister_main_tab_selector"
                android:button="@null"
                android:checked="true"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/sister_main_tab_csms_text"
                android:textColor="@color/sister_main_tab_text_color"
                android:textSize="@dimen/font_13sp" />

            <RadioButton
                android:id="@+id/rb_charge"
                style="@style/WrapWrap"
                android:layout_marginTop="@dimen/size_10dp"
                android:background="@drawable/sister_main_tab_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/sister_main_tab_charge_text"
                android:textColor="@color/sister_main_tab_text_color"
                android:textSize="@dimen/font_13sp" />

            <RadioButton
                android:id="@+id/rb_system"
                style="@style/WrapWrap"
                android:layout_marginTop="@dimen/size_10dp"
                android:background="@drawable/sister_main_tab_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/sister_main_tab_system_text"
                android:textColor="@color/sister_main_tab_text_color"
                android:textSize="@dimen/font_13sp"
                android:visibility="gone" />
        </RadioGroup>

        <ImageView
            android:id="@+id/call_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_16dp"
            android:paddingLeft="@dimen/size_10dp"
            android:paddingRight="@dimen/size_10dp"
            android:src="@drawable/sister_icon_call"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/voice_btn"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/voice_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_5dp"
            android:paddingLeft="@dimen/size_10dp"
            android:paddingRight="@dimen/size_10dp"
            android:src="@drawable/sister_voice_icon_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            style="@style/ConCon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/main_rg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_10dp"
        android:src="@drawable/sister_icon_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/layout_main"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>